Bug 93694 - [BAT eDP PSR] *ERROR* TIMEOUT: Sink CRC counter is not zeroed
Summary: [BAT eDP PSR] *ERROR* TIMEOUT: Sink CRC counter is not zeroed
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: highest normal
Assignee: Rodrigo Vivi
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-13 10:09 UTC by Daniel Vetter
Modified: 2017-07-24 22:43 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Daniel Vetter 2016-01-13 10:09:29 UTC

    
Comment 1 Daniel Vetter 2016-01-13 10:10:36 UTC
The PSR Bat test fails (currently only hsw-xps12 has a psr panel). The testcase itself seems happy, but the kernel complains with the above message.

Is this a serious issue, or should we simply tune it down to DRM_DEBUG_KMS?
Comment 2 Daniel Vetter 2016-01-13 10:11:37 UTC
Correction, it seems to work well on bsw-nuc-2. Long-term history of this testcase on the CI server can be found at

/archive/results/CI_IGT_test/igt@kms_sink_crc_basic.html
Comment 3 Jani Nikula 2016-01-13 14:39:23 UTC
(In reply to Daniel Vetter from comment #2)
> Correction, it seems to work well on bsw-nuc-2

A NUC wouldn't have eDP or PSR.
Comment 4 Rodrigo Vivi 2016-01-13 15:26:11 UTC
Oh, this is odd since the first check on this path is for the dpcd bit that tells sink crc is supported.
But anyway I'm going to tune down it to DRM_DEBUG_KMS and probably remove the "_basic" from sink crc since it isn't a basic feature or functionality, but just used for testing another features like psr and fbc. what do you think?
Comment 5 Daniel Vetter 2016-01-13 16:46:58 UTC
(In reply to Rodrigo Vivi from comment #4)
> Oh, this is odd since the first check on this path is for the dpcd bit that
> tells sink crc is supported.
> But anyway I'm going to tune down it to DRM_DEBUG_KMS and probably remove
> the "_basic" from sink crc since it isn't a basic feature or functionality,
> but just used for testing another features like psr and fbc. what do you
> think?

It's basic validation feature, if it doesn't work we can't validate the feature (PSR) itself. That's why imo it must be in BAT. Same reason we have a basic testcase for pipe CRC sanity in BAT, just to make sure that feature tests can give correct results.

wrt tuning down another option is that the kernel should maybe give the testcase more information (like return -ENOTTY to signal sink crc isn't working/present, so that the testcase can skip correctly.
Comment 6 Daniel Vetter 2016-01-13 17:08:23 UTC
Just to clarify: Currently the testcase returns SUCCESS, and since there's clearly no edp on a nuc that would be a bug in either the kernel or userspace in correctly skipping the testcase.
Comment 7 Rodrigo Vivi 2016-01-13 22:09:59 UTC
So, this machine do have eDP. Both hsw-xps12 and bdw-ultra have PSR capable eDP panels as we can see with archive/results/CI_IGT_test/igt@kms_psr_sink_crc@psr_basic.html
that is btw all green now.

Also, the test is returning success because the sink crc is actually being calculated... just times out when trying to disable back the sink crc calculation.

So, better to keep it as a debug_kms as Daniel suggested: https://patchwork.freedesktop.org/patch/70436/

Daniels argument on keeping it as basic made total sense to me so I now agree, so let's keep it there.
Comment 8 Rodrigo Vivi 2016-01-29 23:13:35 UTC
Merged.

commit dc5a9037141924c0867eb4a6e5220479dcda84f9
Author: Rodrigo Vivi <rodrigo.vivi@intel.com>
Date:   Fri Jan 29 14:44:59 2016 -0800

    drm/i915: Sink CRC: tune down error message at stop to debug_kms.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.